<resources>
    <string name="app_name">Janaseva</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="make_call_and_sms">Make call and SMS</string>
    <string name="make_call_only">Make call only</string>
    <string name="send_sms_only">Send SMS only</string>
    <string name="warn_before_sending_alert">Warn Before Sending Alert</string>

    // Malayalam Strings
    <string name="police_mal">പോലീസ്  </string>
    <string name="excise_mal">വ്യാജമദ്യം, മയക്കുമരുന്ന്  </string>
    <string name="highway_police_mal">ഹൈവേ പോലീസ്  </string>
    <string name="vigilance_mal">വിജിലെൻസ്  </string>
    <string name="women_helpline_mal">വനിത ഹെൽപ് ലൈൻ </string>
    <string name="ambulance_mal">ആംബുലൻസ്  </string>
    <string name="fire_force_mal">ഫയർ ഫോർസ്സ്</string>
    <string name="railway_police_mal">റെയിൽവേ പോലീസ്  </string>
    <string name="child_abuse_mal">ബാലപീഡനം </string>
    <string name="stray_dog_attack_mal">തെരുവ്നായ ശല്യം </string>
    <string name="help_a_child_mal">ശിശുഭവൻ </string>
    <string name="blood_bank_mal">രക്തദാനം </string>
    <string name="emergency_mal">അത്യാവശ്യം </string>

    // English Strings
    <string name="police_eng">Police</string>
    <string name="excise_eng">Excise/Drugs</string>
    <string name="highway_police_eng">Highway Police</string>
    <string name="vigilance_eng">Vigilance</string>
    <string name="women_helpline_eng">Women Helpline</string>
    <string name="ambulance_eng">Ambulance</string>
    <string name="fire_force_eng">Fire Force</string>
    <string name="railway_police_eng">Railway Police</string>
    <string name="child_abuse_eng">Child Abuse</string>
    <string name="stray_dog_attack_eng">Stray Dog Attacks</string>
    <string name="help_a_child_eng">Help A Child</string>
    <string name="blood_bank_eng">Blood Bank</string>
    <string name="emergency_eng">Emergency Call</string>


    //Change Version Here on every Release
    <string name="app_version">Version 2.4.5</string>
    <string name="title_activity_pin">Enter Pin</string>
    <string name="enter_your_four_digit_pin">Enter Your Four Digit Pin</string>
    <string name="enable_child_lock">Enable Child Lock</string>
    <string name="child_lock">Child Lock</string>
    <string name="call_center_settings">Call Center Settings</string>
    <string name="long_press_each_card_to_edit_call_center_locations">Long press each card to edit call center locations</string>
    <string name="add_warning">Add Warning</string>
    <string name="call_and_sms_settings">Call And SMS Settings</string>

    <string name="card_subtext">One Click to Call. Press &amp; Hold to Edit</string>
    <string name="no_number_chosen">No Number Chosen Yet</string>
    <string name="choose_a_number_from_your_contacts">Choose a number from your contacts</string>
    <string name="no_contacts_chosen">No Contacts Chosen</string>
    <string name="choose_from_contacts">Choose From Contacts</string>
    <string name="numbers_to_send_sms">Numbers to send SMS</string>
    <string name="add_a_number">ADD A NUMBER</string>
    <string name="edit_message">Edit Message</string>
    <string name="send_location">Send Location</string>
    <string name="save">SAVE</string>
</resources>
